# sage

./: .dockerignore  .gitignore  .vibeguard-duplicate-types-allowlist  ARCHIVE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_REFACTOR.md  CONTRIBUTING.md  CONVERSATION_MODE_CHANGES.md  CONVERSATION_MODE_USAGE.md  Cargo.toml  DEMO_OUTPUT.md  DEPENDENCY_AUDIT_CORRECTED.md  DEPENDENCY_AUDIT_REPORT.md  DOCUMENTATION.md  Dockerfile  FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  LOW-001-RESOLUTION-SUMMARY.md  Makefile  NOTICE  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_README.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_WORK_SUMMARY.md  README.md  README_ENTRY.md  README_zh.md  READ_TOOL_IMPLEMENTATION.md  SECURITY.md  agent3_completion_report.md  app.js  demo_terminal_history.sh  deny.toml  error_analysis_report.md  fix_clippy.py  fix_tools.sh  install.ps1  (+8 more)
crates/sage-cli/: Cargo.toml
crates/sage-cli/examples/: ask_user_demo.rs  comprehensive_test.rs  external_gui_bridge_demo.rs  local_service_mode_demo.rs  memory_optimization_demo.rs  streaming_demo.rs
crates/sage-cli/src/: api_types.rs  app.rs  args.rs  claude_mode.rs  cli_mode.rs  console.rs  executor_factory.rs  http_server.rs  main.rs  progress.rs  router.rs  rpc_server.rs  signal_handler.rs  ui_backend.rs  ui_launcher.rs
crates/sage-cli/src/commands/: config.rs  diagnostics.rs  eval.rs  interactive.rs  mod.rs  models.rs  run.rs  session.rs  session_resume.rs  tools.rs  trajectory.rs  unified.rs  update.rs
crates/sage-cli/src/ipc/: mod.rs  protocol.rs  server.rs
crates/sage-cli/src/ui/: components.rs  icons.rs  indicators.rs  mod.rs  nerd_console.rs  rnk_app.rs  streaming.rs
crates/sage-cli/tests/: pty_ui_tests.rs  ui_layout_tests.rs
crates/sage-cli/ui/: package-lock.json  package.json  tsconfig.json
crates/sage-cli/ui/src/: index.ts
crates/sage-core/: Cargo.toml
crates/sage-core/prompts/agent-prompt/: claude-guide.md  code-review.md  explore.md  general-purpose.md  plan.md
crates/sage-core/prompts/git/: pr-creation.md  safety-protocol.md
crates/sage-core/prompts/security/: bash-security.md  code-security.md  main-policy.md
crates/sage-core/prompts/system-prompt/: asking-questions.md  code-references.md  documentation-lookup.md  doing-tasks.md  environment-info.md  git-status-section.md  help-and-feedback.md  hooks.md  identity.md  no-time-estimates.md  planning-without-timelines.md  professional-objectivity.md  system-reminders-info.md  task-management.md  tone-and-style.md  tool-usage-policy.md
crates/sage-core/prompts/system-reminder/: delegate-mode.md  file-operation-warning.md  plan-mode-active.md  plan-mode-re-entry.md  plan-mode-subagent.md  task-completion.md  team-coordination.md  todo-list-status.md
crates/sage-core/prompts/tool-description/: ask-user-question.md  bash.md  edit.md  enter-plan-mode.md  exit-plan-mode.md  glob.md  grep.md  read.md  task.md  todo-write.md  web-fetch.md  web-search.md  write.md
crates/sage-core/src/: builder.rs  error.rs  hashing.rs  interrupt.rs  lib.rs  types.rs
crates/sage-core/src/agent/: base.rs  completion.rs  execution.rs  lifecycle.rs  mod.rs  options.rs  outcome.rs  reactive_agent.rs  state.rs  step.rs  trait_impls.rs  traits.rs  unified.rs
crates/sage-core/src/auth/: mod.rs  oauth.rs  pkce.rs  token.rs
crates/sage-core/src/builder/: build.rs  components.rs  config.rs  core.rs  error.rs  mod.rs  tests.rs
crates/sage-core/src/cache/: conversation_cache.rs  llm_cache.rs  mod.rs  storage.rs  tests.rs  types.rs
crates/sage-core/src/checkpoints/: config.rs  diff.rs  manager.rs  mod.rs  restore.rs  storage.rs  types.rs  types_tests.rs
crates/sage-core/src/commands/: executor.rs  mod.rs  registry.rs  router.rs  types.rs
crates/sage-core/src/concurrency/: mod.rs
crates/sage-core/src/config/: api_key_helpers.rs  args_loader.rs  config.rs  data_dir.rs  defaults.rs  embedded_providers.rs  env_loader.rs  file_loader.rs  lakeview_config.rs  loader.rs  logging_config.rs  mcp_config.rs  memory_config.rs  mod.rs  model.rs  model_catalog.rs  model_params.rs  models_api.rs  persistence.rs  provider.rs  provider_defaults.rs  provider_registry.rs  timeouts.rs  tool_config.rs  trajectory_config.rs  validation.rs
crates/sage-core/src/context/: auto_compact.rs  compact.rs  config.rs  estimator.rs  manager.rs  mod.rs  pruner.rs  streaming.rs  summarizer.rs
crates/sage-core/src/cost/: mod.rs  pricing.rs  tracker.rs
crates/sage-core/src/diagnostics/: bundle.rs  event_ring.rs  mod.rs  redaction.rs
crates/sage-core/src/error/: classifiers.rs  constructors.rs  context.rs  conversions.rs  mod.rs  types.rs  unified_error.rs  user_messages.rs
crates/sage-core/src/events/: mod.rs
crates/sage-core/src/hooks/: callback_hook.rs  command_hook.rs  events.rs  executor.rs  hook_config.rs  hook_executor_tests.rs  hook_input.rs  hook_output.rs  hook_types.rs  matcher.rs  mod.rs  prompt_hook.rs  registry.rs  registry_tests.rs  types.rs
crates/sage-core/tests/: architecture_guards.rs  gui_contract_tests.rs  integration_test.rs  tool_execution_integration.rs
crates/sage-eval/: Cargo.toml  README.md
crates/sage-eval/src/: lib.rs  main.rs  metrics.rs  report.rs  runner.rs  task.rs  trace.rs
crates/sage-eval/tasks/: eval_results_20260130_145856.json  eval_results_20260130_172545.json  eval_results_20260130_182515.json  offline_smoke.json
crates/sage-sdk/: Cargo.toml  NOTICE
crates/sage-sdk/src/: client.rs  lib.rs  version.rs
crates/sage-session/: Cargo.toml
crates/sage-session/src/: lib.rs  session.rs
crates/sage-tools/: Cargo.toml  EXAMPLES_RESPONSE_BUILDER.md
crates/sage-tools/examples/: improvements_demo.rs  task_management_demo.rs
crates/sage-tools/src/: augment_tools.rs  bash.rs  codebase_retrieval.rs  config.rs  edit.rs  enhanced_errors.rs  json_edit.rs  lib.rs  monitoring.rs  reorganize_tasklist.rs  sequential_thinking.rs  task_done.rs  task_management.rs
crates/sage-tools/tests/: bash_tool_integration.rs  default_tools_graph.rs  edit_tool_integration.rs  grep_tool_integration.rs  read_tool_integration.rs
(+1793 files in other folders)
