[package]
name = "sage-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Sage Agent"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
# Core library
sage-core = { path = "../sage-core", version = "0.9.2" }
sage-tools = { path = "../sage-tools", version = "0.9.2" }
sage-sdk = { path = "../sage-sdk", version = "0.9.2" }

# CLI
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

# Terminal UI (rnk - React-like declarative UI)
rnk = { workspace = true }
crossterm = "0.28"
unicode-width = "0.2"

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
dirs = { workspace = true }
chrono = { workspace = true }

# Signal handling
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
expectrl = "0.7"
rexpect = "0.5"


