[package]
name = "sage-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Sage Agent"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# CLI and formatting
colored = { workspace = true }

# Markdown rendering
pulldown-cmark = "0.9"
syntect = "5.0"
textwrap = "0.16"

# Random number generation (for retry jitter)
rand = "0.8"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
lru = "0.12"
flate2 = "1.0"
dashmap = "6.0"
lazy_static = "1.4"
shell-words = "1.1"
glob = "0.3"
parking_lot = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Configuration
config = { workspace = true }

# Sandbox
regex = { workspace = true }
humantime-serde = { workspace = true }
sha2 = "0.10.9"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
tempfile = "3.10"

[[example]]
name = "markdown_demo"
path = "../../examples/markdown_demo.rs"

[[example]]
name = "test_markdown_agent"
path = "../../examples/test_markdown_agent.rs"

[[example]]
name = "ui_demo"
path = "../../examples/ui_demo.rs"

[[example]]
name = "retry_test"
path = "../../examples/retry_test.rs"

[[example]]
name = "retry_simulation"
path = "../../examples/retry_simulation.rs"

[[example]]
name = "interrupt_demo"
path = "../../examples/interrupt_demo.rs"

[[example]]
name = "builtin_agents_demo"
path = "../../examples/builtin_agents_demo.rs"
