[package]
name = "sage-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-evaluation system for Sage Agent"

[dependencies]
sage-core = { path = "../sage-core" }
sage-tools = { path = "../sage-tools" }
sage-sdk = { path = "../sage-sdk" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
dirs = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# File system
walkdir = "2"

# Regex for pattern matching
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
