[package]
name = "sage-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SDK for Sage Agent"
keywords.workspace = true
categories.workspace = true

[features]
default = ["default-tools"]
default-tools = ["dep:sage-tools"]

[dependencies]
# Core library
sage-core = { path = "../sage-core" }
sage-tools = { path = "../sage-tools", optional = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
