[package]
name = "sage-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SDK for Sage Agent"
keywords.workspace = true
categories.workspace = true

[features]
default = ["default-tools"]
default-tools = ["dep:sage-tools"]

[dependencies]
# Core library
sage-core = { path = "../sage-core", version = "0.13.55" }
sage-tools = { path = "../sage-tools", version = "0.13.55", optional = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
