[package]
name = "sage-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SDK for Sage Agent"
keywords.workspace = true
categories.workspace = true

[features]
default = ["default-tools"]
default-tools = ["dep:sage-tools"]

[dependencies]
# Core library
sage-core = { path = "../sage-core", version = "0.13.57" }
sage-tools = { path = "../sage-tools", version = "0.13.57", optional = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
