[package]
name = "sage-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool implementations for Sage Agent"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core library
sage-core = { path = "../sage-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }

# Async traits
async-trait = { workspace = true }

# JSON path
jsonpath-rust = { workspace = true }

# Process management
tokio-process = { workspace = true }

# Time handling
chrono = { workspace = true }

# Static variables
lazy_static = "1.4"
once_cell = { workspace = true }

# Configuration
toml = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
base64 = "0.21"

# CSV processing
csv = "1.1"

# Regular expressions
regex = "1.5"

# File system utilities
glob = "0.3"
walkdir = "2"

# Process control (Unix only)
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "2.0"

[[example]]
name = "grep_demo"
path = "../../examples/grep_demo.rs"

[[example]]
name = "kill_shell_demo"
path = "../../examples/kill_shell_demo.rs"

[[example]]
name = "notebook_edit_demo"
path = "../../examples/notebook_edit_demo.rs"
