[package]
name = "sage-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool implementations for Sage Agent"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core library
sage-core = { path = "../sage-core", version = "0.9.0" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }

# Async traits
async-trait = { workspace = true }

# JSON path
jsonpath-rust = { workspace = true }

# Time handling
chrono = { workspace = true }

# Static variables
once_cell = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

# Configuration
toml = "0.8"

# HTTP client
reqwest = { workspace = true }
base64 = "0.22"
html2md-rs = "0.10.2"

# Regular expressions
regex = "1.5"

# URL parsing
url = "2.5"

# File system utilities
glob = "0.3"
walkdir = "2"

# ripgrep library crates for high-performance search
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"

# Process control (Unix only)
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "2.0"

# Note: Examples are defined in the root workspace package to avoid filename collisions
